# rust-mandelbrot-set

./: Cargo.toml
src/: main.rs  mandelbrot.rs
