[package]
name = "mandelbrot-visualization"
version = "0.2.0"
authors = ["Tom Selfin <selfint@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.98"
num = "0.3.0"
prisma = "0.1.1"
angular-units = "0.2.4"
